# fastcrypto

./: .gitignore  Cargo.toml
.github/workflows/: build.yml  release.yml
docs/: crates.js  src-files.js
docs/fastcrypto_zkp/: index.html
docs/fastkrypto_uniffi/: all.html  enum.FastCryptoFfiError.html  enum.SignatureScheme.html  fn.blake2b256.html  fn.ed25519_generate_keypair.html  fn.ed25519_public_key_from_private.html  fn.ed25519_sign.html  fn.ed25519_verify.html  fn.hkdf_sha3_256_expand.html  fn.hmac_sha3_256_digest.html  fn.keccak256.html  fn.mnemonic_derive_keypair.html  fn.mnemonic_derive_private_key.html  fn.mnemonic_derive_public_key.html  fn.mnemonic_generate.html  fn.mnemonic_to_seed.html  fn.mnemonic_validate.html  fn.secp256k1_generate_keypair.html  fn.secp256k1_public_key_from_private.html  fn.secp256k1_recover_public_key.html  fn.secp256k1_sign.html  fn.secp256k1_sign_recoverable.html  fn.secp256k1_verify.html  fn.secp256r1_generate_keypair.html  fn.secp256r1_public_key_from_private.html  fn.secp256r1_recover_public_key.html  fn.secp256r1_sign.html  fn.secp256r1_sign_recoverable.html  fn.secp256r1_verify.html  fn.sha256.html  fn.sha3_256.html  fn.sha3_512.html  fn.sha512.html  index.html  (+2 more)
kotlin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/lib/: Cargo.toml  README.md  build.gradle.kts  uniffi.toml
kotlin/lib/.cargo/: config.toml  zig-cc-aarch64-linux-gnu  zig-cc-x86_64-linux-gnu
kotlin/lib/src/commonMain/rust/: lib.rs  seal.rs
kotlin/lib/src/commonTest/kotlin/xyz/mcxross/fastkrypto/: FastKryptoBindingsTest.kt
(+228 files in other folders)
